# agent-playground

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
ideation/: 2026-02-23T15-13-39Z.json  2026-02-23T15-13-39Z.md  2026-02-23T15-15-23Z.json  2026-02-23T15-15-23Z.md
outputs/run_2026-02-23T15-44-25Z/: fix_log.txt  run_result.json  step_1.py  step_2.py  step_3.py  step_3_document_topic_distributions.pkl  step_4.py  topics_labeled.csv
outputs/run_2026-02-23T16-54-02Z/: fix_log.txt  run_result.json  step_1.py  step_2.py
planning/: 2026-02-23T15-22-34Z.json  2026-02-23T15-22-34Z.md  latest.json  latest.md
src/: evaluator.py  executor.py  ideation.py  main.py  planning.py  report.py
src/experiments/: suggested_20260220_145947.py  suggested_20260220_151728.py
